<resources>
    <string name="app_name" translatable="false">Aegis</string>
    <string name="app_name_full" translatable="false">Aegis Authenticator</string>
    <string name="app_name_dev" translatable="false">AegisDev</string>
    <string name="org_name_full" translatable="false">Beem Development</string>
    <string name="action_settings">Settings</string>
    <string name="action_linked_browsers">Linked Browsers</string>
    <string name="action_about">About</string>
    <string name="action_import">Import</string>
    <string name="action_delete">Delete</string>
    <string name="action_transfer">Transfer</string>
    <string name="action_edit_icon">Edit icon</string>
    <string name="action_reset_usage_count">Reset usage count</string>
    <string name="action_reset_usage_count_dialog">Are you sure you want to set the usage count of this entry to 0?</string>
    <string name="action_default_icon">Restore default icon</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="issuer">Issuer</string>
    <string name="suggested">Suggested</string>
    <string name="usage_count">Usage count</string>
    <string name="settings">Preferences</string>
    <string name="pref_cat_appearance_app">App</string>
    <string name="pref_cat_appearance_entries">Entries</string>
    <string name="pref_cat_backups_android">Android</string>
    <string name="pref_cat_backups_auto">Automatic backups</string>
    <string name="pref_section_behavior_title">Behavior</string>
    <string name="pref_section_behavior_summary">Customize the behavior when interacting with the entry list.</string>
    <string name="pref_section_appearance_title">Appearance</string>
    <string name="pref_section_appearance_summary">Adjust the theme, language and other settings that affect the appearance of the app.</string>
    <string name="pref_section_security_title">Security</string>
    <string name="pref_section_security_summary">Configure encryption, biometric unlock, auto lock and other security settings.</string>
    <string name="pref_section_import_export_title">Import &amp; Export</string>
    <string name="pref_section_import_export_summary">Import backups of Aegis or other authenticator apps. Create manual exports of your Aegis vault.</string>
    <string name="pref_section_backups_title">Backups</string>
    <string name="pref_section_backups_summary">Set up automatic backups to a location of your choosing or enable participation in Android\'s backup system.</string>
    <string name="pref_section_icon_packs">Icon packs</string>
    <string name="pref_section_icon_packs_summary">Manage and import icon packs</string>
    <string name="pref_select_theme_title">Theme</string>
    <string name="pref_view_mode_title">View mode</string>
    <string name="pref_lang_title">Language</string>
    <string name="pref_code_group_size_title">Code digit grouping</string>
    <string name="pref_code_group_size_summary">Show code in 2-digit grouping instead of 3-digit grouping</string>
    <string name="pref_account_name_title">Show the account name</string>
    <string name="pref_account_name_summary">Enable this to show the account name next to the issuer</string>
    <string name="pref_timeout_title">Timeout</string>
    <string name="pref_timeout_summary">Automatically lock the vault after %1$s seconds of inactivity</string>
    <string name="pref_slots_title">Key slots</string>
    <string name="pref_slots_summary">Manage the list of keys that can decrypt the vault</string>
    <string name="pref_import_file_title">Import from file</string>
    <string name="pref_import_file_summary">Import tokens from a file</string>
    <string name="pref_android_backups_title">Participate in Android\'s backup system</string>
    <string name="pref_android_backups_summary">Allow Android\'s backup system to include Aegis\' vault in its backups. This is only supported for encrypted vaults.</string>
    <string name="pref_backups_title">Automatically back up the vault</string>
    <string name="pref_backups_summary">Automatically create backups of the vault on external storage when changes are made. This is only supported for encrypted vaults.</string>
    <string name="pref_backups_location_title">Directory for backup files</string>
    <string name="pref_backups_location_summary">Backups will be stored at</string>
    <string name="pref_backups_trigger_title">Trigger backup</string>
    <string name="pref_backups_trigger_summary">Manually trigger a backup</string>
    <string name="pref_backups_versions_title">Number of versions to keep</string>
    <plurals name="pref_backups_versions_summary">
        <item quantity="one">Keep %1$d version of the backup</item>
        <item quantity="other">Keep %1$d versions of the backup</item>
    </plurals>
    <string name="pref_import_app_title">Import from app</string>
    <string name="pref_import_app_summary">Import tokens from an app (requires root access)</string>
    <string name="pref_export_title">Export</string>
    <string name="pref_export_summary">Export the vault</string>
    <string name="pref_password_reminder_title">Password reminder</string>
    <string name="pref_password_reminder_summary">Show a reminder to enter the password every once in a while, so that you don\'t forget it.</string>
    <string name="pref_secure_screen_title">Screen security</string>
    <string name="pref_secure_screen_summary">Block screenshots and other attempts to capture the screen within the app</string>
    <string name="pref_tap_to_reveal_title">Tap to reveal</string>
    <string name="pref_tap_to_reveal_summary">Tokens will be hidden by default. Tap on the tokens to reveal code.</string>
    <string name="pref_tap_to_reveal_time_title">Timeout for tap to reveal</string>
    <string name="pref_auto_lock_title">Auto lock</string>
    <string name="pref_auto_lock_summary">When %s</string>
    <string name="pref_auto_lock_summary_disabled">Disabled</string>
    <string name="pref_auto_lock_prompt">Automatically lock Aegis when</string>
    <string name="pref_auto_lock_type_back_button">The back button is pressed</string>
    <string name="pref_auto_lock_type_minimize">The app is minimized</string>
    <string name="pref_auto_lock_type_device_lock">The device is locked</string>
    <string name="pref_encryption_title">Encryption</string>
    <string name="pref_encryption_summary">Encrypt the vault and unlock it with a password or biometrics</string>
    <string name="pref_biometrics_title">Biometric unlock</string>
    <string name="pref_biometrics_summary">Allow biometric authentication to unlock the vault</string>
    <string name="pref_set_password_title">Change password</string>
    <string name="pref_set_password_summary">Set a new password which you will need to unlock your vault</string>
    <string name="pref_section_easytfa">EasyTFA</string>
    <string name="pref_section_easytfa_summary">Enable and configure the EasyTFA connection.</string>
    <string name="pref_cat_easytfa_general">General</string>
    <string name="pref_cat_easytfa_browser">Browser</string>
    <string name="pref_cat_easytfa_server">Server</string>
    <string name="pref_easytfa_enabled">Enable EasyTFA</string>
    <string name="pref_easytfa_enabled_summary">Enable this to connect to the relay</string>
    <string name="pref_easytfa_firebase_enabled">Enable Firebase</string>
    <string name="pref_easytfa_firebase_enabled_summary">Firebase is required for EasyTFA notifications</string>
    <string name="pref_easytfa_browser_link">Link Browser</string>
    <string name="pref_easytfa_browser_link_summary">Link a new browser</string>
    <string name="pref_easytfa_browser_linked">View Linked Browsers</string>
    <string name="pref_easytfa_browser_linked_summary">View and manage your linked browsers</string>
    <string name="pref_easytfa_server_url">Server URL</string>
    <string name="pref_easytfa_server_url_summary">Set a custom relay server</string>
    <string name="pref_easytfa_server_test">Test connection</string>
    <string name="pref_easytfa_server_test_summary">Test your connection to the server</string>
    <string name="pref_easytfa_unlink_all_browsers">Unlink all Browsers</string>
    <string name="pref_easytfa_unlink_all_browsers_summary">Remove all linked browsers</string>
    <string name="pref_easytfa_unlink_all_browsers_dialog">Are you sure you want to unlink all browsers? This will prevent all currently linked browser extensions from making new requests until they are relinked.</string>
    <string name="export_encrypted">Encrypt the vault</string>
    <string name="export_help">This action will export the vault out of Aegis\' internal storage. Select the format you\'d like your export to be in:</string>
    <string name="export_warning_unencrypted">You are about to export an unencrypted copy of your Aegis vault. <b>This is not recommended</b>.</string>
    <string name="export_warning_accept">I understand the risk</string>
    <string name="export_format_aegis">Aegis (.JSON)</string>
    <string name="export_format_google_auth_uri">Text file (.TXT)</string>
    <string name="export_format_hint">Export format</string>
    <string name="choose_authentication_method">Security</string>
    <string name="authentication_method_explanation">Aegis is a security-focused 2FA app. Tokens are stored in a vault, that can optionally be encrypted with a password of your choosing. If an attacker obtains your encrypted vault file, they will not be able to access the contents without knowing the password.\n\nWe\'ve preselected the option that we think would fit best for your device.</string>
    <string name="authentication_method_none">None</string>
    <string name="authentication_method_none_description">No password is needed to unlock the vault and it will not be encrypted. <b>This option is not recommended</b>.</string>
    <string name="authentication_method_password">Password</string>
    <string name="authentication_method_password_description">A password is needed to unlock the vault.</string>
    <string name="authentication_method_password_explanation">Warning: If you forget your password, you will permanently lose access to your tokens. There is no way to recover them without the password.</string>
    <string name="authentication_method_biometrics">Biometrics</string>
    <string name="authentication_method_biometrics_description">In addition to a password, biometrics registered on this device, like a fingerprint or your face, can be used to unlock the vault.</string>
    <string name="authentication_method_set_password">Password</string>
    <string name="authentication_enter_password">Enter your password</string>
    <string name="authentication">Unlock the vault</string>
    <string name="authentication_multiline">Unlock\nthe vault</string>
    <string name="auth_use_biometrics">Or tap here to use <font fgcolor='#FF0D86C1'>biometrics</font></string>
    <string name="set_password">Please enter a password</string>
    <string name="set_group">Please enter a group name</string>
    <string name="set_number">Please enter a number</string>
    <string name="set_password_confirm">Please confirm the password</string>
    <string name="invalid_password">The password is incorrect</string>
    <string name="invalidated_biometrics">A change in your device\'s security settings has been detected. Please go to \"Aegis -> Settings -> Security -> Biometric unlock\" to disable and re-enable biometric unlock.</string>
    <string name="password_reminder">Please enter your password. We occasionally ask you to do this so that don\'t forget it.</string>
    <string name="enter_password_authy_message">It looks like your Authy tokens are encrypted. Please close Aegis, open Authy and unlock the tokens with your password. Instead, Aegis can also attempt to decrypt your Authy tokens for you, if you enter your password below.</string>
</resources>